[package]
name = "netavark-bridge-vlan-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.9.0"
netavark = "1.10.3"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.18.1"
netlink-sys = "0.8.5"
