[package]
name = "netavark-bridge-vlan-plugin"
version = "0.2.0"
authors = ["takonomura"]
edition = "2021"
repository = "https://github.com/takonomura/netavark-bridge-vlan-plugin"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.9.0"
netavark = "1.10.3"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.18.1"
netlink-sys = "0.8.5"
